kubernets/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-node-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: sample-app.local
    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: sample-node-service

            port:
              number: 80
status:
  loadBalancer: {}
